--- a/django_blog/templates/base.html
+++ b/django_blog/templates/base.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top" style='background-color:white'>
         <!-- Container wrapper -->
         <div class="container-fluid">
             <!-- Navbar brand -->
