--- a/django_blog/search/templates/search/posts.html
+++ b/django_blog/search/templates/search/posts.html
@@ -1,5 +1,7 @@
 {% extends 'home.html' %}
 
+{% block title %}{% endblock title %}
+
 {% block category %}{% endblock category %}
 
 {% block pagination %}
@@ -10,15 +12,15 @@
         {% endif %}
 
         {% for i in paginator.page_range %}
-        {% if page_obj.number == i %}
-        <span class="current-page">{{ i }}</span>
-        {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %} <a href="?query={{ query }}&page={{ i }}">{{ i }}</a>
+            {% if page_obj.number == i %}
+                <span class="current-page">{{ i }}</span>
+            {% elif i > page_obj.number|add:'-5' and i < page_obj.number|add:'5' %} <a href="?query={{ query }}&page={{ i }}">{{ i }}</a>
             {% endif %}
-            {% endfor %}
+        {% endfor %}
 
-            {% if page_obj.has_next %}
+        {% if page_obj.has_next %}
             <a href="?query={{ query }}&page={{ page_obj.next_page_number }}">next</a>
-            {% endif %}
+        {% endif %}
     </div>
 </div>
 {% endblock pagination %}
