--- a/django_blog/templates/home.html
+++ b/django_blog/templates/home.html
@@ -22,6 +22,7 @@
         </div>
     </div>
     {% endblock category %}
+    <h3 class='fw-bold my-4'>Posts</h3>
     {% for post in page_obj %}
     <div class="row p-3 border rounded mb-4">
         <div class="row px-4 py-3">
