Customize: Django admin site; Add: filters, list_display and more...
Add: basic filters for Post, Category; list_display for almost every model; search filters for almost every model with corresponding search fields

--- a/django_blog/search/templates/search/posts.html
+++ b/django_blog/search/templates/search/posts.html
@@ -1,6 +1,6 @@
 {% extends 'home.html' %}
 
-{% block title %}{% endblock title %}
+{% block title %}Posts{% endblock title %}
 
 {% block category %}{% endblock category %}
 
